--- a/public/chatStyle.css
+++ b/public/chatStyle.css
@@ -1,6 +1,4 @@
-/* body, html, #root, .container, .columns, #user-list, #user-list aside, #user-list aside .menu{
-    height: 100%;
-} */
+
 .anton{
     font-family: 'Anton', sans-serif
 }
@@ -13,6 +11,7 @@
     top: 0;
     bottom: 0;
     z-index: 4;
+    background-color: rgba(255, 0, 255, 0.06)
 }
 #hangman{
     position: fixed;
@@ -40,6 +39,7 @@
     flex-direction: column;
     justify-content: center
 }
+
 .menu-label{
     text-decoration: underline
 }
@@ -47,6 +47,7 @@
     position: absolute;
     right: 0%;
     padding: 0;
+    background-color:  rgba(255, 0, 255, 0.06)
 }
 .screen{
     position: relative;
@@ -58,129 +59,16 @@
     border: 4px outset silver;
     height: 100%;
     overflow: hidden;
-    animation: turn-on .5s ease-in;
-    -o-animation: turn-on .5s ease-in;
-    -moz-animation: turn-on .5s ease-in;
-    -webkit-animation: turn-on .5s ease-in;
+    
 }
-@keyframes turn-on{
-    0%{
 
-        height: 0%;
-        top: 50%
-    }
-    50%{
-       
-        opacity: .5;
-    }
-    100%{
-        height: 100%;
-        top: 0
-    }
-}
-@-o-keyframes turn-on{
-    0%{
-        height: 0%;
-        top: 50%
-    }
-    50%{
-        opacity: .5;
-    }
-    100%{
-        height: 100%;
-        top: 0
-    }
-}
-@-moz-keyframes turn-on{
-    0%{
-        height: 0%;
-        top: 50%
-    }
-    50%{
-        opacity: .5;
-    }
-    100%{
-        height: 100%;
-        top: 0
-    }
-}
-@-webkit-keyframes turn-on{
-    0%{
-        height: 0%;
-        top: 50%
-    }
-    50%{
-        opacity: .5;
-    }
-    100%{
-        height: 100%;
-        top: 0
-    }
-}
 
 .screen .columns{
-    height: 100%;
-    animation: fade-in 1.5s ease-in;
-    -o-animation: fade-in 1.5s ease-in;
-    -moz-animation: fade-in 1.5s ease-in;
-    -webkit-animation: fade-in 1.5s ease-in;
-  
+    height: 100%;  
 }
-@keyframes fade-in{
-    0%{
-        opacity: 0;
-    }
-    33%{
-        opacity: 0;
-    }
-    100%{
-        opacity: 1;
-    }
-}
-@-o-keyframes fade-in{
-    0%{
-        opacity: 0;
-    }
-    33%{
-        opacity: 0;
-    }
-    100%{
-        opacity: 1;
-    }
-}
-@-moz-keyframes fade-in{
-    0%{
-        opacity: 0;
-    }
-    33%{
-        opacity: 0;
-    }
-    100%{
-        opacity: 1;
-    }
-}
-@-webkit-keyframes fade-in{
-    0%{
-        opacity: 0;
-    }
-    33%{
-        opacity: 0;
-    }
-    100%{
-        opacity: 1;
-    }
-}
+
 .screen::before{
-    /* content: ' ';
-    width: 100%;
-    height: 100%;
-    background: green; 
-    position: absolute;
-    right: 0;
-    top: 0;
-    box-shadow: inset 0 0 0 0px rgba(255,255,255,0.05);
-    filter: blur(4000px);
-    z-index: 0; */
+ 
     content: " ";
   display: block;
   position: absolute;
@@ -213,271 +101,9 @@
     opacity: 0;
     z-index: 2;
     pointer-events: none;
-    animation: flicker 0.15s infinite;
-    -o-animation: flicker 0.15s infinite;
-    -moz-animation: flicker 0.15s infinite;
-    -webkit-animation: flicker 0.15s infinite;
+   
   }
-@keyframes flicker {
-    0% {
-    opacity: 0.27861;
-    }
-    5% {
-    opacity: 0.34769;
-    }
-    10% {
-    opacity: 0.23604;
-    }
-    15% {
-    opacity: 0.90626;
-    }
-    20% {
-    opacity: 0.18128;
-    }
-    25% {
-    opacity: 0.83891;
-    }
-    30% {
-    opacity: 0.65583;
-    }
-    35% {
-    opacity: 0.67807;
-    }
-    40% {
-    opacity: 0.26559;
-    }
-    45% {
-    opacity: 0.84693;
-    }
-    50% {
-    opacity: 0.96019;
-    }
-    55% {
-    opacity: 0.08594;
-    }
-    60% {
-    opacity: 0.20313;
-    }
-    65% {
-    opacity: 0.71988;
-    }
-    70% {
-    opacity: 0.53455;
-    }
-    75% {
-    opacity: 0.37288;
-    }
-    80% {
-    opacity: 0.71428;
-    }
-    85% {
-    opacity: 0.70419;
-    }
-    90% {
-    opacity: 0.7003;
-    }
-    95% {
-    opacity: 0.36108;
-    }
-    100% {
-    opacity: 0.24387;
-    }
-  }
-@-o-keyframes flicker {
-    0% {
-    opacity: 0.27861;
-    }
-    5% {
-    opacity: 0.34769;
-    }
-    10% {
-    opacity: 0.23604;
-    }
-    15% {
-    opacity: 0.90626;
-    }
-    20% {
-    opacity: 0.18128;
-    }
-    25% {
-    opacity: 0.83891;
-    }
-    30% {
-    opacity: 0.65583;
-    }
-    35% {
-    opacity: 0.67807;
-    }
-    40% {
-    opacity: 0.26559;
-    }
-    45% {
-    opacity: 0.84693;
-    }
-    50% {
-    opacity: 0.96019;
-    }
-    55% {
-    opacity: 0.08594;
-    }
-    60% {
-    opacity: 0.20313;
-    }
-    65% {
-    opacity: 0.71988;
-    }
-    70% {
-    opacity: 0.53455;
-    }
-    75% {
-    opacity: 0.37288;
-    }
-    80% {
-    opacity: 0.71428;
-    }
-    85% {
-    opacity: 0.70419;
-    }
-    90% {
-    opacity: 0.7003;
-    }
-    95% {
-    opacity: 0.36108;
-    }
-    100% {
-    opacity: 0.24387;
-    }
-  }
-@-moz-keyframes flicker {
-    0% {
-    opacity: 0.27861;
-    }
-    5% {
-    opacity: 0.34769;
-    }
-    10% {
-    opacity: 0.23604;
-    }
-    15% {
-    opacity: 0.90626;
-    }
-    20% {
-    opacity: 0.18128;
-    }
-    25% {
-    opacity: 0.83891;
-    }
-    30% {
-    opacity: 0.65583;
-    }
-    35% {
-    opacity: 0.67807;
-    }
-    40% {
-    opacity: 0.26559;
-    }
-    45% {
-    opacity: 0.84693;
-    }
-    50% {
-    opacity: 0.96019;
-    }
-    55% {
-    opacity: 0.08594;
-    }
-    60% {
-    opacity: 0.20313;
-    }
-    65% {
-    opacity: 0.71988;
-    }
-    70% {
-    opacity: 0.53455;
-    }
-    75% {
-    opacity: 0.37288;
-    }
-    80% {
-    opacity: 0.71428;
-    }
-    85% {
-    opacity: 0.70419;
-    }
-    90% {
-    opacity: 0.7003;
-    }
-    95% {
-    opacity: 0.36108;
-    }
-    100% {
-    opacity: 0.24387;
-    }
-  }
-@-webkit-keyframes flicker {
-    0% {
-    opacity: 0.27861;
-    }
-    5% {
-    opacity: 0.34769;
-    }
-    10% {
-    opacity: 0.23604;
-    }
-    15% {
-    opacity: 0.90626;
-    }
-    20% {
-    opacity: 0.18128;
-    }
-    25% {
-    opacity: 0.83891;
-    }
-    30% {
-    opacity: 0.65583;
-    }
-    35% {
-    opacity: 0.67807;
-    }
-    40% {
-    opacity: 0.26559;
-    }
-    45% {
-    opacity: 0.84693;
-    }
-    50% {
-    opacity: 0.96019;
-    }
-    55% {
-    opacity: 0.08594;
-    }
-    60% {
-    opacity: 0.20313;
-    }
-    65% {
-    opacity: 0.71988;
-    }
-    70% {
-    opacity: 0.53455;
-    }
-    75% {
-    opacity: 0.37288;
-    }
-    80% {
-    opacity: 0.71428;
-    }
-    85% {
-    opacity: 0.70419;
-    }
-    90% {
-    opacity: 0.7003;
-    }
-    95% {
-    opacity: 0.36108;
-    }
-    100% {
-    opacity: 0.24387;
-    }
-  }
+
   
 #word-form{
     position: relative;
@@ -528,7 +154,7 @@
     position: relative;
     left: 70%;
     width: 30%;
-	background: #009933;
+	background: #3D9100;
     border-radius: .4em;
 }
 
@@ -540,7 +166,7 @@
 	width: 0;
 	height: 0;
 	border: 6px solid transparent;
-	border-left-color: #009933;
+	border-left-color: #3D9100;
 	border-right: 0;
 	border-bottom: 0;
 	margin-top: -3px;
@@ -550,7 +176,7 @@
     position: relative;
     left: 0%;
     width: 30%;
-	background: #ff6600;
+	background: #C26EFF;
     border-radius: .4em;
 }
 
@@ -562,7 +188,7 @@
 	width: 0;
 	height: 0;
 	border: 6px solid transparent;
-	border-right-color: #ff6600;
+	border-right-color: #C26EFF;
 	border-left: 0;
 	border-bottom: 0;
 	margin-top: -3px;
@@ -575,14 +201,15 @@
     border: none
 }
 .user-list-item:not(:last-child){
-    border-bottom: 1px solid lightgray
+    border-bottom: 1px solid #3D9100
 }
 
 #message-form{
     position: fixed;
     width: 80%;
     bottom: 0%;
-    z-index: 5
+    z-index: 5;
+    background-color: rgba(0, 0, 255, 0.05)
 }
 .bold{
     font-weight: bold
@@ -615,74 +242,9 @@
 }
 #score span{
     position: relative;
-    animation: pass 1s linear;
-    -o-animation: pass 1s linear;
-    -moz-animation: pass 1s linear;
-    -webkit-animation: pass 1s linear;
 }
-@keyframes pass{
-    0%{
-        opacity: 0;
-        top: 80px;
-        
-    }
-    50%{
-        opacity: 1;
 
-    }
-    100%{
-        
-        top: 0px;
-    }
-}
-@-o-keyframes pass{
-    0%{
-        opacity: 0;
-        top: 80px;
-        
-    }
-    50%{
-        opacity: 1;
-       
-    }
-    100%{
-        
-        top: 0px;
-    }
-}
-@-moz-keyframes pass{
-    0%{
-        opacity: 0;
-        top: 80px;
-        
-    }
-    50%{
-        opacity: 1;
-     
-    }
-    100%{
-        
-        top: 0px;
-    }
-}
-@-webkit-keyframes pass{
-    0%{
-        opacity: 0;
-        top: 80px;
-        
-    }
-    50%{
-        opacity: 1;
-       
-    }
-    100%{
-        
-        top: 0px;
-    }
-}
-.blink{
-    animation: blink 1s steps(2) infinite;
-}
+
 @keyframes blink{
     0%{
         visibility: visible;
@@ -695,7 +257,7 @@
     }
 }
 .fa-comment.new{
-    color: green;
+    color: #C26EFF;
 }
 .fa-crown{
     color: gold
@@ -703,41 +265,13 @@
 .fa-brain{
     color: pink
 }
+.fa-star{
+    color: silver
+}
 .fa-spinner{
     color: black;
-    animation: spin 1s steps(2) infinite;
-    -webkit-animation: spin 1s steps(2) infinite;
-    -o-animation: spin 1s steps(2) infinite;
-    -moz-animation: spin 1s steps(2) infinite;
 }
-  @keyframes spin {
-    0%{transform: rotate(0deg)}
-    25%{transform: rotate(90deg)}
-    50%{transform: rotate(180deg)}
-    75%{transform: rotate(270deg)}
-    100%{transform: rotate(360deg)}
-  }
-  @-webkit-keyframes spin {
-    0%{-webkit-transform: rotate(0deg)}
-    25%{-webkit-transform: rotate(90deg)}
-    50%{-webkit-transform: rotate(180deg)}
-    75%{-webkit-transform: rotate(270deg)}
-    100%{-webkit-transform: rotate(360deg)}
-  }
-  @-o-keyframes spin {
-    0%{-o-transform: rotate(0deg)}
-    25%{-o-transform: rotate(90deg)}
-    50%{-o-transform: rotate(180deg)}
-    75%{-o-transform: rotate(270deg)}
-    100%{-o-transform: rotate(360deg)}
-  }
-  @-moz-keyframes spin {
-    0%{-moz-transform: rotate(0deg)}
-    25%{-moz-transform: rotate(90deg)}
-    50%{-moz-transform: rotate(180deg)}
-    75%{-moz-transform: rotate(270deg)}
-    100%{-moz-transform: rotate(360deg)}
-  }
+ 
 @media only screen and (max-width: 768px){
     .speech-bubble-left, .speech-bubble-right{
         width: 70%;
@@ -759,15 +293,17 @@
     }
     #user-list{
         display: none;
-        z-index: 2
+        z-index: 2;
+        background-color: #3e3444
     }
     #user-list.is-active{
         display: block;
-        z-index: 2;
+        z-index: 5;
+        opacity: 1;
     }
     .navbar-burger{
         display: block;
-        z-index: 5
+        z-index: 5; 
     }
     #chat-button{
         display: block;
@@ -816,6 +352,5 @@
         width: 75%
     }
    
-    
 
 }
