--- a/public/chatStyle.css
+++ b/public/chatStyle.css
@@ -13,6 +13,10 @@
     z-index: 4;
     background-color: rgba(255, 0, 255, 0.06)
 }
+
+#Urban-logo{
+    clip-path: polygon(0% 0%, 100% 0%, 100% 60%, 0% 60%);
+  }
 #hangman{
     position: fixed;
     top: 0;
