--- a/public/joinStyle.css
+++ b/public/joinStyle.css
@@ -1,5 +1,5 @@
 html, body, #root{
-    height: 100%;
+    min-height: 100%;
     background-color: hsl(0, 0%, 10%)
 }
 
@@ -7,6 +7,7 @@ html, body, #root{
     height: 100%;
     width: 100%;
     position: relative;
+    top: 50px; 
     display: flex;
     align-items: center;
     justify-content: center;
@@ -24,6 +25,32 @@ html, body, #root{
 }
 .play{
   font-family:  'Play', sans-serif
+}
+#Urban-logo{
+  clip-path: polygon(0% 0%, 100% 0%, 100% 60%, 0% 60%);
+}
+input[type="radio"]{
+  visibility: hidden;
+  position: relative;
+  z-index: -1;
+}
+
+.label{
+  position: relative;
+  z-index: 1;
+}
+.label figure{
+  margin-top: -5%
+}
+.selected{
+  box-shadow: 1px 2px 2px black;
+  border: 1px solid #3D9100
+}
+
+.anton.label{
+  display: flex;
+  justify-content: center;
+  align-items: center
 }
 .list-item{
   display: flex;
