--- a/public/joinStyle.css
+++ b/public/joinStyle.css
@@ -108,7 +108,7 @@ input[type="radio"]{
     box-shadow: 0 2px 2px black
   }
   .fa-spinner{
-    margin-bottom: 20px;
+    margin: 20px 0
 
 }
 @media only screen and (max-width: 1024px){
