--- a/chatStyle.css
+++ b/chatStyle.css
@@ -16,6 +16,10 @@
 
 #Urban-logo{
     clip-path: polygon(0% 0%, 100% 0%, 100% 60%, 0% 60%);
+    transform: scaleY(1.5)
+  }
+  #Oxford-logo{
+      transform: scaleY(.75);
   }
 #hangman{
     position: fixed;
