--- a/chatStyle.css
+++ b/chatStyle.css
@@ -286,7 +286,12 @@
 }
 
  
-
+@media only screen and (max-width: 400px){
+    #word-container{
+        position: relative;
+        top: -8vh
+    }
+}
 @media only screen and (max-width: 768px){
     .speech-bubble-left, .speech-bubble-right{
         width: 70%;
@@ -372,9 +377,8 @@
     #letter-buttons{
         margin-top: -10%
     }
-
-   
 }
+
 @media only screen 
   and (min-width: 1024px) 
   and (max-height: 1366px) 
