--- a/public/chatStyle.css
+++ b/public/chatStyle.css
@@ -45,7 +45,6 @@
     position: relative;
     z-index: 0;
     padding: 0;
-  
     overflow: scroll;
     -webkit-overflow-scrolling: touch
 }
@@ -103,7 +102,8 @@
 #hint{
     height: 100px;
     overflow: scroll;
-    -webkit-overflow-scrolling: touch
+    -webkit-overflow-scrolling: touch;
+    margin-bottom: 0
 }
 .screen::after {
     content: " ";
@@ -138,9 +138,7 @@
     justify-content: center;
     align-items: center
 }
-#hint{
-    margin-bottom: -10px
-}
+
 .messages-container{
     position: fixed;
     top: 30%;
@@ -285,7 +283,11 @@
     color: silver
 }
 
- 
+#small-screen-toggler{
+    margin-left: 10px;
+    position: relative;
+    z-index: 10;
+}
 
 @media only screen and (max-width: 768px){
     .speech-bubble-left, .speech-bubble-right{
@@ -354,7 +356,7 @@
         background-attachment: fixed;
     }
     #hint{
-        height: 70px;
+        height: 140px;
         
     }
     #score{
@@ -364,6 +366,9 @@
     #info-text{
         position: relative;
         top: -10px;
+        display: flex;
+        align-items: center;
+        justify-content: center
     }
     #word-container{
         position: relative;
@@ -373,15 +378,7 @@
         margin-top: -10%
     }
 }
-@media only screen and (max-width: 400px){
-    #word-container{
-        position: relative;
-        top: -11vh
-    }
-    #letter-buttons{
-        margin-top: -15%;
-    }
-}
+
 
 @media only screen 
   and (min-width: 1024px) 
