--- a/public/chatStyle.css
+++ b/public/chatStyle.css
@@ -379,7 +379,11 @@
     }
 }
 
-
+@media only screen and (max-width: 400px){
+    #word-container{
+        top: -9vh
+    }
+}
 @media only screen 
   and (min-width: 1024px) 
   and (max-height: 1366px) 
