--- a/chatStyle.css
+++ b/chatStyle.css
@@ -47,6 +47,7 @@
 }
 #waiting-text{
     display: flex;
+    display: -webkit-flex;
     flex-direction: column;
     justify-content: center;
     align-items: center
@@ -106,6 +107,7 @@
     position: relative;
     height: 100%;
     display: flex;
+    display: -webkit-flex;
     justify-content: center;
     align-items: center;
     z-index: 3;
@@ -116,6 +118,7 @@
 }
 #word-form-header{
     display: flex;
+    display: -webkit-flex;
     justify-content: center;
     align-items: center
 }
@@ -341,6 +344,7 @@
         position: relative;
         top: -10px;
         display: flex;
+        display: -webkit-flex;
         align-items: center;
         justify-content: center
     }
@@ -395,6 +399,7 @@ and (max-width: 991px){
     }
     #letter-buttons{
         display: flex;
+        display: -webkit-flex;
         align-items: center
     }
 }
