--- a/public/chatStyle.css
+++ b/public/chatStyle.css
@@ -75,7 +75,7 @@
 .screen .columns{
     height: 100%;  
 }
-.screen::before{
+/* .screen::before{
  
     content: " ";
     display: block;
@@ -89,8 +89,8 @@
     background-size: 100% 2px, 3px 100%;
     background-attachment: fixed;
     pointer-events: none;
-}
-.screen::after {
+} */
+/* .screen::after {
     content: " ";
     display: block;
     position: absolute;
@@ -102,7 +102,7 @@
     opacity: 0;
     z-index: 2;
     pointer-events: none;
-}
+} */
 #word-form{
     position: relative;
     height: 100%;
