--- a/public/joinStyle.css
+++ b/public/joinStyle.css
@@ -2,7 +2,10 @@ html, body, #root{
     min-height: 100%;
     background-color: hsl(0, 0%, 10%)
 }
-
+::-webkit-scrollbar {
+  width: 0px;  
+  background: transparent; 
+}
 #join-container{
     height: 100%;
     width: 100%;
@@ -114,6 +117,8 @@ input[type="radio"]{
 .card .card-content .list{
   max-height: 75px;
   overflow: scroll;
+  -ms-overflow-style: none;
+  overflow: -moz-scrollbars-none;  
 }
 
   .label{
